feat: 实现element更新Props功能

--- a/example/update/index.html
+++ b/example/update/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .h2 {
-        color: #ff0000;
+      .red {
+        color: red;
       }
-      .h3 {
-        color: #00ff00;
+
+      .blue {
+        color: blue;
       }
     </style>
   </head>
